# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("./../../../multimedia_camera_framework.gni")

ohos_fuzztest("CompositionFeatureFuzzTest") {
  module_out_path = "camera_framework/camera_framework"
  fuzz_config_file = "../compositionfeature_fuzzer"

  include_dirs = []

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-fno-access-control",
  ]

  sources = [ "compositionfeature_fuzzer.cpp" ]

  deps = [
    "${multimedia_camera_framework_path}/frameworks/native/camera/base:camera_framework",
    "${multimedia_camera_framework_path}/test/test_common:test_common",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libprivacy_sdk",
    "access_token:libtoken_setproc",
    "graphic_surface:surface",
    "image_framework:image_native",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [ ":CompositionFeatureFuzzTest" ]
}
